implemented DMX recognition

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,6 @@
 platform = atmelavr
 board = nanoatmega168
 framework = arduino
-
 upload_port = /dev/ttyUSB1
 monitor_speed = 57600
+lib_deps = mathertel/DMXSerial@^1.5.3
